unpackaged/main/default/objects/pse__Forecast_Enhanced_Detail__c/pse__Forecast_Enhanced_Detail__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__ForecastEnhancedDetailHelp</customHelpPage>
    <description>Stores the billing forecast records created for a project or opportunity.</description>
    <label>Billing Forecast Detail</label>
    <nameField>
        <displayFormat>FDetail-{0000}</displayFormat>
        <label>Billing Forecast Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Forecast Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>