unpackaged/main/default/objects/pse__Forecast_Enhanced_Detail__c/fields/pse__Billings_Budgets__c.field-meta.xml
<CustomField>
    <fullName>pse__Billings_Budgets__c</fullName>
    <description>The billings for budgets.</description>
    <inlineHelpText>The billings for budgets.</inlineHelpText>
    <label>Billings: Budgets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>