unpackaged/main/default/objects/pse__Forecast_Enhanced_Detail__c/fields/pse__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>pse__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The opportunity associated with the billing forecast.</description>
    <inlineHelpText>The opportunity associated with the billing forecast.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Forecast_Enhanced_Details</relationshipName>
    <type>Lookup</type>
</CustomField>