unpackaged/main/default/objects/pse__Forecast_Enhanced_Detail__c/fields/pse__Parent_Summary__c.field-meta.xml
<CustomField>
    <fullName>pse__Parent_Summary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to the billing forecast summary for the region, practice, or group of the project or opportunity of this billing forecast summary.</description>
    <inlineHelpText>A lookup to the billing forecast summary for the region, practice, or group of the project or opportunity of this billing forecast summary.</inlineHelpText>
    <label>Parent Billing Forecast Summary</label>
    <referenceTo>pse__Forecast_Enhanced_Summary__c</referenceTo>
    <relationshipLabel>Child Billing Forecast Details</relationshipLabel>
    <relationshipName>Forecast_Enhanced_Details</relationshipName>
    <type>Lookup</type>
</CustomField>