unpackaged/main/default/objects/pse__Forecast_Enhanced_Detail__c/fields/pse__Perpetual_Backlog_Held_RR__c.field-meta.xml
<CustomField>
    <fullName>pse__Perpetual_Backlog_Held_RR__c</fullName>
    <description>The scheduled held resource requests in the context of perpetual time periods (All Time Periods).</description>
    <inlineHelpText>The scheduled held resource requests in the context of perpetual time periods (All Time Periods).</inlineHelpText>
    <label>Perpetual Backlog: Held RRs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>