unpackaged/main/default/objects/pse__Forecast_Enhanced_Detail__c/fields/pse__Perpetual_Billings_Expenses__c.field-meta.xml
<CustomField>
    <fullName>pse__Perpetual_Billings_Expenses__c</fullName>
    <description>The perpetual billings for expenses.</description>
    <inlineHelpText>The perpetual billings for expenses.</inlineHelpText>
    <label>Perpetual Billings: Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>