unpackaged/main/default/objects/pse__Forecast_Enhanced_Detail__c/fields/pse__Perpetual_Billings_Misc_Adjustments__c.field-meta.xml
<CustomField>
    <fullName>pse__Perpetual_Billings_Misc_Adjustments__c</fullName>
    <description>The perpetual billings for miscellaneous adjustments.</description>
    <inlineHelpText>The perpetual billings for miscellaneous adjustments.</inlineHelpText>
    <label>Perpetual Billings: Misc Adjustments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>