unpackaged/main/default/objects/pse__Forecast_Enhanced_Detail__c/fields/pse__Scheduled_Held_Resource_Requests__c.field-meta.xml
<CustomField>
    <fullName>pse__Scheduled_Held_Resource_Requests__c</fullName>
    <description>The scheduled held resource requests.</description>
    <inlineHelpText>The scheduled held resource requests.</inlineHelpText>
    <label>Scheduled: Held Resource Requests</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>