unpackaged/main/default/objects/pse__Forecast_Enhanced_Detail__c/fields/pse__Unscheduled_Revenue__c.field-meta.xml
<CustomField>
    <fullName>pse__Unscheduled_Revenue__c</fullName>
    <description>Potential revenue, in the context of perpetual time periods (All Time Periods).</description>
    <inlineHelpText>Potential revenue, in the context of perpetual time periods (All Time Periods).</inlineHelpText>
    <label>Unscheduled Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>